// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remarkParseShortcodes parse pattern with leading caret should be a remark shortcode node 1`] = `
{
  "children": [
    {
      "data": {
        "shortcode": "foo",
        "shortcodeData": {
          "bar": "baz",
        },
      },
      "type": "shortcode",
    },
  ],
  "type": "root",
}
`;

exports[`remarkParseShortcodes parse pattern with leading caret should parse multiple shortcodes 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "paragraph",
        },
      ],
      "type": "paragraph",
    },
    {
      "data": {
        "shortcode": "foo",
        "shortcodeData": {
          "bar": "bar",
        },
      },
      "type": "shortcode",
    },
    {
      "data": {
        "shortcode": "foo",
        "shortcodeData": {
          "bar": "baz",
        },
      },
      "type": "shortcode",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "next para",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`remarkParseShortcodes parse pattern without leading caret should handle pattern without leading caret 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "paragraph",
        },
      ],
      "type": "paragraph",
    },
    {
      "data": {
        "shortcode": "foo",
        "shortcodeData": {
          "bar": "baz",
        },
      },
      "type": "shortcode",
    },
  ],
  "type": "root",
}
`;

exports[`remarkParseShortcodes parse pattern without leading caret should parse multiple shortcodes 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "paragraph",
        },
      ],
      "type": "paragraph",
    },
    {
      "data": {
        "shortcode": "foo",
        "shortcodeData": {
          "bar": "bar",
        },
      },
      "type": "shortcode",
    },
    {
      "data": {
        "shortcode": "foo",
        "shortcodeData": {
          "bar": "baz",
        },
      },
      "type": "shortcode",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "next para",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
